<resources>
    <string name="app_name">CSC425-Project</string>
    <string name="headerTextView">Flint Water Info</string>
    <string name="volunteerButton">Volunteer</string>
    <string name="donateButton">Donate</string>
    <string name="resourceButton">Get Resources</string>
    <string name="GetResources">Get Resources</string>
    <string name="Donate">Donate</string>
    <string name="Volunteer">Volunteer</string>
    <string name="DonatePageIntroText">
            Water Donations</string>
    <string name="DonateLoc1Text">100 or less cases:\n
            \n Catholic Charities Center for Hope \n 517 E. Fifth Ave
            \n Flint, MI 48503 \n Monday-Friday 9am-4pm</string>
    <string name="DonateMapButton1">MAP</string>
    <string name="DonateLoc2Text">Red Cross \n 1401 Grand Traverse \n Flint, MI 48503
            \n Saturday-Sunday 9am-4pm</string>
    <string name="DonateMapButton2">MAP</string>
    <string name="DonateLoc3Text">More than 100 cases:\n
            \n Please go to: \n Food Bank of Eastern Michigan \n 2300 Lapeer Rd
            \n Flint, MI 48503 \n Monday-Friday 8am-4:30pm</string>
    <string name="DonateMapButton3">MAP</string>
    <string name="FinancialDonationsText">Financial Donations</string>
    <string name="DonateFinancialAddress">www.FlintKids.org</string>
    <string name="DonateFinancialPhone">United Way 810-232-8121</string>
    <string name="newsButton">News</string>
    <string name="title_activity_news__read">News_Read</string>
    <string name="news_button">read more</string>
    <string name="title_activity_news_web">NewsWeb</string>
    <string name="title_activity_news_read">NewsRead</string>
    <string name="volunteerTitle">Volunteering</string>
    <string name="volunteerName">Name:</string>
    <string name="volunteerBirthdate">Birthdate:</string>
    <string name="volunteerAddress">Address:</string>
    <string name="volunteerCity">City:</string>
    <string name="volunteerState">State:</string>
    <string name="volunteerZipCode">Zip Code:</string>
    <string name="volunteerReset">RESET</string>
    <string name="volunteerSubmit">SUBMIT</string>
    <string name="Resource">Get Resources</string>
    <string name="WaterPickUp">Visit one of the locations below to pick up water, water filters, or testing kits</string>
    <string name="ResourceLoc1">Fire Station #1 \n310 East 5th St \nFlint, MI 48502</string>
    <string name="ResourceLoc2">Fire Station #3 \n1525 Martin Luther King Ave \nFlint, MI 48503</string>
    <string name="ResourceLoc3">Fire Station #5 \n3402 Western Rd. \nFlint, MI 48506</string>
    <string name="ResourceLoc4">Fire Station #6 \n716 West Pierson Rd \nFlint, MI 48505</string>
    <string name="ResourceLoc5">Fire Station #8 \n202 East Atherton Rd \nFlint, MI 48507</string>
    <string name="ResourceMapButton4">MAP</string>
    <string name="ResourceMapButton1">MAP</string>
    <string name="ResourceMapButton2">MAP</string>
    <string name="ResourceMapButton3">MAP</string>
    <string name="ResourceMapButton5">MAP</string>


</resources>
