<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.team1.csc425_project.Donate">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.team1.csc425_project.Donate">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Donate"
            android:id="@+id/resourceHeader"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DonatePageIntroText"
            android:id="@+id/donatePageIntroText"
            android:layout_marginTop="37dp"
            android:textStyle="bold|normal"
            android:textColor="#ffffff"
            android:layout_below="@+id/resourceHeader"
            android:layout_centerHorizontal="true"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DonateLoc1Text"
            android:id="@+id/resourceLoc1"
            android:layout_below="@+id/donatePageIntroText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DonateMapButton1"
            android:id="@+id/resourceMapButton1"
            android:layout_alignBottom="@+id/resourceLoc1"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:onClick="process"
            android:clickable="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DonateLoc2Text"
            android:id="@+id/resourceLoc2"
            android:layout_marginTop="33dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_below="@+id/resourceLoc1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DonateMapButton2"
            android:id="@+id/resourceMapButton2"
            android:layout_alignBottom="@+id/resourceLoc2"
            android:layout_alignLeft="@+id/resourceMapButton1"
            android:layout_alignStart="@+id/resourceMapButton1"
            android:onClick="process"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DonateLoc3Text"
            android:id="@+id/resourceLoc3"
            android:layout_below="@+id/resourceLoc2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:textStyle="bold"
            android:textColor="#ffffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DonateMapButton3"
            android:id="@+id/resourceMapButton3"
            android:layout_alignBottom="@+id/resourceLoc3"
            android:layout_alignLeft="@+id/resourceMapButton2"
            android:layout_alignStart="@+id/resourceMapButton2"
            android:onClick="process"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/FinancialDonationsText"
            android:id="@+id/financialDonationsText"
            android:layout_marginTop="37dp"
            android:textStyle="bold|normal"
            android:textColor="#ffffff"
            android:layout_below="@+id/resourceLoc3"
            android:layout_centerHorizontal="true"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DonateFinancialAddress"
            android:id="@+id/donateFinancialAddress"
            android:layout_below="@+id/financialDonationsText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:autoLink="web" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DonateFinancialPhone"
            android:id="@+id/donateFinancialPhone"
            android:layout_below="@+id/donateFinancialAddress"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="33dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:autoLink="web" />


    </RelativeLayout>

</ScrollView>