<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.team1.csc425_project.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/headerTextView"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/resourceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/mybutton"
        android:text="@string/resourceButton" />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donateButton"
        android:id="@+id/donateButton"
        android:layout_below="@+id/resourceButton"
        android:layout_alignLeft="@+id/resourceButton"
        android:layout_alignStart="@+id/resourceButton"
        android:layout_marginTop="47dp"
        android:background="@drawable/mybutton"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volunteerButton"
        android:id="@+id/volunteerButton"
        android:layout_below="@+id/donateButton"
        android:layout_alignLeft="@+id/donateButton"
        android:layout_alignStart="@+id/donateButton"
        android:layout_marginTop="47dp"
        android:background="@drawable/mybutton"/>

</RelativeLayout>
